--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
 .displaydata h1{
     margin-top: 0px;
     text-align: center;
-    background-color: rgb(62, 83, 62);
+    background-color: rgb(64, 68, 64);
     color: white;
     padding: 10px;
 }
@@ -44,11 +44,15 @@
 /* class for automatic scrollbar appear for display data  */
 
 #dataContainer::-webkit-scrollbar{
-    height: 12px;
+    height: 10px;
     background-color: blue;
     scroll-behavior: auto;
-    
+    border-radius: 6px;
    
+}
+
+#dataContainer::-webkit-scrollbar:hover{
+    background-color: cyan;
 }
 
 /* css for all buttons  */
